[package]
name = "yang2"
version = "0.13.0"
authors = ["Renato Westphal <renato@opensourcerouting.org>"]
description = "libyang2 bindings for Rust"
keywords = ["yang", "libyang"]
edition = "2018"
license = "MIT"
repository = "https://github.com/holo-routing/yang2-rs"
documentation = "https://docs.rs/yang2"
readme = "README.md"
categories = ["parser-implementations"]
exclude = ["assets/**"]

[dependencies]
libyang2-sys = { path = "libyang2-sys", version = "0.9.0" }
bitflags = "2.5"
num-traits = "0.2"
num-derive = "0.4"

[dev-dependencies]
criterion = "0.3.3"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
missing_safety_doc = "allow"

[[bench]]
name = "data"
harness = false

[features]
default = []
use_bindgen = ["libyang2-sys/use_bindgen"]
bundled = ["libyang2-sys/bundled"]
