[package]
name = "yang3"
version = "0.13.1"
authors = ["Renato Westphal <renato@opensourcerouting.org>"]
description = "libyang3 bindings for Rust"
keywords = ["yang", "libyang"]
edition = "2018"
license = "MIT"
repository = "https://github.com/holo-routing/yang-rs"
documentation = "https://docs.rs/yang3"
readme = "README.md"
categories = ["parser-implementations"]
exclude = ["assets/**"]

[dependencies]
libyang3-sys = { path = "libyang3-sys", version = "0.3.0" }
bitflags = "2.5"
num-traits = "0.2"
num-derive = "0.4"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.3.3"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
missing_safety_doc = "allow"
too_long_first_doc_paragraph = "allow"

[[bench]]
name = "data"
harness = false

[features]
default = []
bindgen = ["libyang3-sys/bindgen"]
bundled = ["libyang3-sys/bundled"]
