[package]
name = "libyang2-sys"
version = "0.1.0"
authors = ["Renato Westphal <renato@opensourcerouting.org>"]
description = "Raw FFI bindings for libyang2"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/libyang2-sys"
categories = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = "0.55.0"
