[package]
name = "libyang2-sys"
version = "0.1.1"
authors = ["Renato Westphal <renato@opensourcerouting.org>"]
description = "Raw FFI bindings for libyang2"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/libyang2-sys"
categories = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.55.0", optional = true }

[features]
# Use pre-generated FFI bindings
default = []
# Generate FFI bindings dynamically.
# For this to work libyang2 needs to be installed in the system.
use_bindgen = ["bindgen"]
