[package]
name = "libyang2-sys"
version = "0.9.0"
authors = ["Renato Westphal <renato@opensourcerouting.org>"]
description = "Raw FFI bindings for libyang2"
keywords = ["yang", "libyang"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/libyang2-sys"
categories = ["external-ffi-bindings"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.68.0", optional = true }
cc = { version = "1.0", features = ["parallel"], optional = true }
cmake = { version = "0.1", optional = true }
pkg-config = "0.3.27"

[features]
# Use pre-generated FFI bindings
default = []
# Generate FFI bindings dynamically.
# For this to work libyang2 needs to be installed in the system.
use_bindgen = ["bindgen"]
# Bundle libyang2 C files into a static archive linked to this crate.
# This removes the libyang2 dynamic link dependency.
bundled = ["cc", "cmake"]
